--- a/empact/package.json
+++ b/empact/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@material-ui/core": "^4.7.0",
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.8",
     "quagga": "^0.12.1",
