--- a/empact/package.json
+++ b/empact/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.7.0",
+    "@material-ui/icons": "^4.5.1",
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.8",
     "quagga": "^0.12.1",
